--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 sploitkit>=0.5.5
-requests
-pyobjc-core;platform_system=="Darwin"
-pyobjc;platform_system=="Darwin"
 terminaltables
 twint
+vt-py
+python-dotenv
+
+
