--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,2 @@
-.env
-modules/__pycache__/
-__pycache__/
-*.py[cod]
-
-.DS_Store
+# Created by venv; see https://docs.python.org/3/library/venv.html
+*
